Chapter09/09-end/edge-service/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edge-app
  labels:
    app: edge-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: edge-app
  template:
    metadata:
      labels:
        app: edge-app
    spec:
      terminationGracePeriodSeconds: 20
      containers:
        - name: edge-app
          image: polarbookshop/edge-service:0.0.1-SNAPSHOT
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 5" ]
          ports:
            - containerPort: 9000
          resources:
            requests:
              memory: "512Mi"
              cpu: "0.5"
            limits:
              memory: "512Mi"
