Chapter09/09-end/edge-service/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: edge-service
  labels:
    app: edge-app
spec:
  type: ClusterIP
  selector:
    app: edge-app
  ports:
  - protocol: TCP
    port: 9000
    targetPort: 9000
